api: remove unprefixed endpoints
Bug: #363808
